# cookie_refuser

./: Cargo.toml  LICENSE  README.md
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
src/: button_data.rs  lib.rs  server.rs  utils.rs
