[package]
name = "cookie_refuser"
description = "A simple web extension that /refuse/* optional cookies. *(data collection variant)"
repository = "https://github.com/mdevolde/cookie-refuser"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.99"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["Window", "Document", "HtmlCollection", "HtmlElement", "NodeList", "ShadowRoot", "MutationObserver", "MutationObserverInit", "MutationRecord", "Storage", "Event", "console"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
reqwest = { version = "0.11", features = ["json"] }

[lib]
crate-type = ["cdylib"]
